After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 736679 - videodecoder: do not leak pool and allocator in error case
videodecoder: do not leak pool and allocator in error case
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.4.2
Assigned To: Nicolas Dufresne (ndufresne)
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-09-15 14:26 UTC by Ognyan Tonchev (redstar_)
Modified: 2014-09-15 16:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
videodecoder: do not leak pool and allocator in error case (931 bytes, patch)
2014-09-15 14:26 UTC, Ognyan Tonchev (redstar_)
committed Details | Review

Description Ognyan Tonchev (redstar_) 2014-09-15 14:26:20 UTC
Created attachment 286208 [details] [review]
videodecoder: do not leak pool and allocator in error case

pool and allocator are leaked in error case
Comment 1 Nicolas Dufresne (ndufresne) 2014-09-15 14:42:51 UTC
Review of attachment 286208 [details] [review]:

Good catch.
Comment 2 Nicolas Dufresne (ndufresne) 2014-09-15 16:00:18 UTC
Comment on attachment 286208 [details] [review]
videodecoder: do not leak pool and allocator in error case

1.5 commit 787b3fa7ec361f28a59eed57b17b37cb95c60d38
Author: Ognyan Tonchev <ognyan@axis.com>
Date:   Mon Sep 15 16:23:57 2014 +0200

    videodecoder: do not leak pool and allocator in error case
    
    https://bugzilla.gnome.org/show_bug.cgi?id=736679

1.4 commit 6fe317
Comment 3 Nicolas Dufresne (ndufresne) 2014-09-15 16:01:10 UTC
Thanks