videodecoder: do not leak pool and allocator in error case

https://bugzilla.gnome.org/show_bug.cgi?id=736679